# ifs_fractal_generator

./: CMakeLists.txt  README.md
Libraries/include/: UI.h  application.h  ifs.h  input.h  renderer.h  shaders.h
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib  glm.lib
src/: UI.cpp  application.cpp  glad.c  ifs.cpp  input.cpp  main.cpp  renderer.cpp  shaders.cpp
src/shaders/: draw_vertex_shader.vert  fragment_shader.frag  fragment_shader_shaded.frag  generation_frag.frag  geometry.geom  vertex_shader.vert
transformations/: dragon.txt  koch.txt  leaf.txt  pyramid.txt  sierpinski.txt
